card section has been done

--- a/index.html
+++ b/index.html
@@ -61,6 +61,131 @@
                 </div>
             </section>
             <!-- banner section ends here  -->
+
+            <!-- popular section starts here  -->
+             <section class="popular_main">
+                <div class="card">
+                    <div>
+                        <img src="./images/action.png" alt="">
+                    </div>
+                    <div>
+                        <h1>Camera</h1>
+                        <h3>$980.25</h3>
+                    </div>
+                    <div>
+                       <span>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                       </span>
+                       <span>4.99</span>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet iste natus nemo neque. Tempore, dolor!</p>
+                </div>
+                <div class="card">
+                    <div>
+                        <img src="./images/airpod.png" alt="">
+                    </div>
+                    <div>
+                        <h1>Camera</h1>
+                        <h3>$980.25</h3>
+                    </div>
+                    <div>
+                       <span>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                       </span>
+                       <span>4.99</span>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet iste natus nemo neque. Tempore, dolor!</p>
+                </div>
+                <div class="card">
+                    <div>
+                        <img src="./images/camera.png" alt="">
+                    </div>
+                    <div>
+                        <h1>Camera</h1>
+                        <h3>$980.25</h3>
+                    </div>
+                    <div>
+                       <span>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                       </span>
+                       <span>4.99</span>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet iste natus nemo neque. Tempore, dolor!</p>
+                </div>
+                <div class="card">
+                    <div>
+                        <img src="./images/cameraa.jpg" alt="">
+                    </div>
+                    <div>
+                        <h1>Camera</h1>
+                        <h3>$980.25</h3>
+                    </div>
+                    <div>
+                       <span>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                       </span>
+                       <span>4.99</span>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet iste natus nemo neque. Tempore, dolor!</p>
+                </div>
+                <div class="card">
+                    <div>
+                        <img src="./images/drone.png" alt="">
+                    </div>
+                    <div>
+                        <h1>Camera</h1>
+                        <h3>$980.25</h3>
+                    </div>
+                    <div>
+                       <span>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                       </span>
+                       <span>4.99</span>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet iste natus nemo neque. Tempore, dolor!</p>
+                </div>
+                <div class="card">
+                    <div>
+                        <img src="./images/latest-camera.jpg" alt="">
+                    </div>
+                    <div>
+                        <h1>Camera</h1>
+                        <h3>$980.25</h3>
+                    </div>
+                    <div>
+                       <span>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                       </span>
+                       <span>4.99</span>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet iste natus nemo neque. Tempore, dolor!</p>
+                </div>
+             </section>
+            <!-- popular section ends here  -->
         </main>
         <!-- main section ends here  -->
 
