making card responsive

--- a/index.html
+++ b/index.html
@@ -186,6 +186,16 @@
                 </div>
              </section>
             <!-- popular section ends here  -->
+
+
+            <!-- contact section starts here  -->
+              <section class="contact">
+                  <div class="child_1"></div>
+                  <div class="child_2"></div>
+                  <div class="child_3"></div>
+                  <div class="child_4"></div>
+              </section>
+            <!-- contact section ends here  -->
         </main>
         <!-- main section ends here  -->
 
