--- a/index.html
+++ b/index.html
@@ -190,10 +190,18 @@
 
             <!-- contact section starts here  -->
               <section class="contact">
-                  <div class="child_1"></div>
-                  <div class="child_2"></div>
-                  <div class="child_3"></div>
-                  <div class="child_4"></div>
+                  <div class="child_1">
+                    <img src="./nature-images/img-2.jpg" alt="">
+                  </div>
+                  <div class="child_2">
+                    <img src="./nature-images/img-2.jpg" alt="">
+                  </div>
+                  <div class="child_3">
+                    <img src="./nature-images/img-2.jpg" alt="">
+                  </div>
+                  <div class="child_4">
+                    <img src="./nature-images/img-2.jpg" alt="">
+                  </div>
               </section>
             <!-- contact section ends here  -->
         </main>
