contact section complete

--- a/index.html
+++ b/index.html
@@ -192,15 +192,19 @@
               <section class="contact">
                   <div class="child_1">
                     <img src="./nature-images/img-2.jpg" alt="">
+                    <span class="icon"><i class="fa-solid fa-plus"></i></span>
                   </div>
                   <div class="child_2">
                     <img src="./nature-images/img-2.jpg" alt="">
+                    <span class="icon"><i class="fa-solid fa-plus"></i></span>
                   </div>
                   <div class="child_3">
                     <img src="./nature-images/img-2.jpg" alt="">
+                    <span class="icon"><i class="fa-solid fa-plus"></i></span>
                   </div>
                   <div class="child_4">
                     <img src="./nature-images/img-2.jpg" alt="">
+                    <span class="icon"><i class="fa-solid fa-plus"></i></span>
                   </div>
               </section>
             <!-- contact section ends here  -->
