qna img and form section done

--- a/index.html
+++ b/index.html
@@ -208,6 +208,43 @@
                   </div>
               </section>
             <!-- contact section ends here  -->
+
+            <!-- qna section starts here  -->
+             <div class="qna_main">
+                <div class="qna_child">
+                    <img src="./images/qna.jpg" alt="">
+                </div>
+                <div class="qna_child">
+                    <div class="form_container">
+                       <div class="form_field">
+                        <p>Your Name</p>
+                        <input type="text" name="" id="">
+                       </div>
+                       <div class="form_field">
+                        <p>Your Name</p>
+                        <input type="text" name="" id="">
+                       </div>
+                       <div class="form_field">
+                        <p>Your Name</p>
+                        <input type="text" name="" id="">
+                       </div>
+                       <div class="form_field">
+                        <p>Your Name</p>
+                        <select name="" id="">
+                            <option value="">Developer</option>
+                            <option value="">Developer</option>
+                            <option value="">Developer</option>
+                            <option value="">Developer</option>
+                        </select>
+                       </div>
+                       <div class="form_field_text_area">
+                        <p>Hell</p>
+                        <textarea name="" id=""></textarea>
+                       </div>
+                    </div>
+                </div>
+             </div>
+            <!-- qna section ends here  -->
         </main>
         <!-- main section ends here  -->
 
